# Sori

./: .gitignore
llm-tools-demo/: README.md  instructions.txt  pyproject.toml
llm-tools-demo/src/demo/: cli.py  orchestrator.py  system_prompt.txt
llm-tools-demo/src/demo/tools/: __init__.py  curl_tool.py  find_tools.py  read_file_tools.py  registry.py  system_command_tool.py  weather_tool.py
